[package]
name = "lisp-playground-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = "0.3.61"
yew-router = "0.17"

# [lib]
# crate-type = ["cdylib", "rlib"]